--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <body>
     <button onclick="openCookieChaos()">COOKIE OF CHAOS</button>
     <button onclick="openSpotify()">Spotify</button>
+    <button onclick="openCC3d()">CC3d</button>
+    
     <script>
         function openCookieChaos() {
             var win = window.open()
@@ -20,6 +22,16 @@
         function openSpotify() {
             var win = window.open()
             var url = "https://open.spotify.com/"
+            var iframe = win.document.createElement('iframe')
+            iframe.style.width = "100%";
+            iframe.style.height = "100%";
+            iframe.style.border = "none";
+            iframe.src = url
+            win.document.body.appendChild(iframe)
+        }
+        function openCC3d() {
+            var win = window.open()
+            var url = "https://crazy-cattle.github.io/"
             var iframe = win.document.createElement('iframe')
             iframe.style.width = "100%";
             iframe.style.height = "100%";
