added crash button, maybe

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <button onclick="openLemmy()">Lemmy</button>
     <button onclick="openSpotify()">Spotify</button>
     <button onclick="openCC3d()">CC3d</button>
+    <button href="chrome://inducebrowsercrashforrealz">DO NOT CLICK THIS BUTTON</button>
     
     <script>
         function openCookieChaos() {
