fixed crash things, maybe

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <button onclick="openLemmy()">Lemmy</button>
     <button onclick="openSpotify()">Spotify</button>
     <button onclick="openCC3d()">CC3d</button>
-    <button href="chrome://inducebrowsercrashforrealz">DO NOT CLICK THIS BUTTON</button>
+    <button><a href="chrome://inducebrowsercrashforrealz">DO NOT CLICK THIS</a></button>
+    <a href="chrome://inducebrowsercrashforrealz">DO NOT CLICK THIS</a>
     
     <script>
         function openCookieChaos() {
