Update crash.html, made better and faster and worse

--- a/crash.html
+++ b/crash.html
@@ -7,8 +7,9 @@
             iframe.style.height = "100%";
             iframe.style.border = "none";
             iframe.src = url
+            for (let step = 0; step < 5; step++) {
             win.document.body.appendChild(iframe)
+            }
         }
-        crash();
         crash();
 </script>
