--- a/crash.html
+++ b/crash.html
@@ -7,9 +7,10 @@
             iframe.style.height = "100%";
             iframe.style.border = "none";
             iframe.src = url
-            for (let step = 0; step < 5; step++) {
             win.document.body.appendChild(iframe)
-            }
-        }
-        crash();
+          }
+          for (let i = 0; i < 10; i++;) {
+            crash();
+          }
+
 </script>
