--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <button onclick="openLemmy()">Lemmy</button>
     <button onclick="openSpotify()">Spotify</button>
     <button onclick="openCC3d()">CC3d</button>
+    <button onclick="openSR3d()">SNOW RIDER 3d</button>
     <button><a onclick="crash()">DO NOT CLICK THIS</a></button>
     <button onclick="openTextAdventure()">Click for an adventure</button>
     <button onclick="openTextAdventure()">What is Life?</button>
@@ -46,6 +47,16 @@
         function openCC3d() {
             var win = window.open()
             var url = "https://crazy-cattle.github.io/"
+            var iframe = win.document.createElement('iframe')
+            iframe.style.width = "100%";
+            iframe.style.height = "100%";
+            iframe.style.border = "none";
+            iframe.src = url
+            win.document.body.appendChild(iframe)
+        }
+        function openSR3d() {
+            var win = window.open()
+            var url = "https://drippy-cat.github.io/snowrider3D"
             var iframe = win.document.createElement('iframe')
             iframe.style.width = "100%";
             iframe.style.height = "100%";
