--- a/GOL.html
+++ b/GOL.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE>
+<html>
+  <body>
+    <p id="gameboard"></p>
+    <script>
+      let gameboard = Array(10).fill(Array(10).fill(a));
+      document.getElementById("gameboard").innerHTML = gameboard;
+    </script>
+  </body>
+</html>
