--- a/GOL.html
+++ b/GOL.html
@@ -1,6 +1,9 @@
 <!DOCTYPE>
 <html>
   <body>
+    <p>
+      updated
+    </p>
     <p id="gameboard"></p>
     <script>
       let gameboard = Array(10).fill(Array(10).fill(a));
