--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <button onclick="openSR3d()">SNOW RIDER 3d</button>
     <button><a onclick="crash()">DO NOT CLICK THIS</a></button>
     <button onclick="openTextAdventure()">Click for an adventure</button>
-    <button onclick="openTextAdventure()">What is Life?</button>
+    <button onclick="openGOL()">What is Life?</button>
     
     <script>
         function openCookieChaos() {
@@ -89,7 +89,7 @@
             iframe.src = url
             win.document.body.appendChild(iframe)
         }
-        function openGameofLife() {
+        function openGOL() {
             var win = window.open()
             var url = "https://frostytoast37.github.io/GOL.html"
             var iframe = win.document.createElement('iframe')
