--- a/GOL.html
+++ b/GOL.html
@@ -6,7 +6,16 @@
     </p>
     <p id="gameboard"></p>
     <script>
-      let gameboard = Array(10).fill(Array(10).fill(a));
+      let gameboard = [], row = 20, col = 20, fillValue = "."
+      for (let i = 0; i < row; i++){
+        let temp = []
+        for (let j = 0; j < col; j++){
+         temp[j] = fillValue
+        }
+        array2D.push(temp)
+      }
+  array2D.push(temp)
+}
       document.getElementById("gameboard").innerHTML = gameboard;
     </script>
   </body>
