--- a/GOL.html
+++ b/GOL.html
@@ -12,7 +12,7 @@
         for (let j = 0; j < col; j++){
          temp[j] = fillValue
           }
-          array2D.push(temp)
+          gameboard.push(temp)
         }
       document.getElementById("gameboard").innerHTML = gameboard;
     </script>
