--- a/GOL.html
+++ b/GOL.html
@@ -6,9 +6,10 @@
     </p>
     <p id="gameboard"></p>
     <script>
-      let gameboard = [], row = 20, col = 20, fillValue = "."
+      let gameboard = [], row = 20, col = 20, fillValue = " . "
       for (let i = 0; i < row; i++){
         let temp = []
+        gameboard.push("\r")
         for (let j = 0; j < col; j++){
          temp[j] = fillValue
           }
