--- a/GOL.html
+++ b/GOL.html
@@ -25,8 +25,7 @@
         for (let i = 0; i < row; i++){
           tableHTML += '<tr>';
           for (let j = 0; j < col; j++){
-            tableHTML += '<td id=gameboard[i][j]></td>';
-            document.getElementById(gameboard[i][j]).innerHTML = gameboard[i][j];
+            tableHTML += '<td id='+gameboard[i][j]+'>'+gameboard[i][j]+'</td>';
             };
           tableHTML += '</tr>';
           };
