--- a/GOL.html
+++ b/GOL.html
@@ -2,11 +2,11 @@
 <html>
   <body>
     <p>
-      updated5
+      updated6
     </p>
     <p id="gameboard"></p>
     <script>
-      let gameboard = [], row = 10, col = 10, fillValue = " . "
+      let gameboard = [], row = 10, col = 10, fillValue = "&nbsp&nbsp&nbsp.&nbsp&nbsp&nbsp"
       for (let i = 0; i < row; i++){
         let temp = []
         
