Update GOL.html 20x20

--- a/GOL.html
+++ b/GOL.html
@@ -2,11 +2,11 @@
 <html>
   <body>
     <p>
-      updated6
+      updated7
     </p>
     <p id="gameboard"></p>
     <script>
-      let gameboard = [], row = 10, col = 10, fillValue = "&nbsp&nbsp&nbsp.&nbsp&nbsp&nbsp"
+      let gameboard = [], row = 20, col = 20, data = ".", fillValue = "&nbsp&nbsp&nbsp"+data+"&nbsp&nbsp&nbsp"
       for (let i = 0; i < row; i++){
         let temp = []
         
