--- a/GOL.html
+++ b/GOL.html
@@ -1,6 +1,10 @@
 <!DOCTYPE>
 <html>
   <body>
+    <form>
+      <label for="checked">Boxes checked</label><br>
+      <input type="text" id="checked" name="checked">
+    </form>
     <p id="gameboard"></p>
     <p>
       updated9
