--- a/GOL.html
+++ b/GOL.html
@@ -1,58 +1,73 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      table, td {
+        border: 1px solid black;
+        border-collapse: collapse;
+        padding: 2px;
+      }
+    </style>
+  </head>
   <body>
-    <form>
-      <label for="checked">Boxes checked, format as </label><br>
+    <form onsubmit="submitForm(event)">
+      <label for="form">Boxes checked (format: label,x,y e.g., A,1,2): </label><br>
       <input type="text" id="form" name="form">
-      <button onclick="submitForm()"><h>submit</h></button>
+      <button type="submit">Submit</button>
     </form>
-    <p id="gameboard"></p>
-    <p>
-      updated13
-    </p>
-    <script>
-      let check_list = [];
-      let checked_Split = [];
-      var formRows = 1;
-      let checked = document.getElementById("form").value;
-      let gameboard = [], row = 20, col = 20, data = ".", fillValue = "&nbsp&nbsp&nbsp"+data+"&nbsp&nbsp&nbsp"
 
-      function submitForm() {
-        checked = document.getElementById("form").value;
-        checked_split = checked.split(",")
-        checked_list.push(checked_split)
-        checked_split = []
+    <p id="gameboard"></p>
+    <p>updated13</p>
+
+    <script>
+      let checked_list = [];
+      const row = 20, col = 20, fillValue = "&nbsp;&nbsp;&nbsp;.&nbsp;&nbsp;&nbsp;";
+
+      function submitForm(e) {
+        e.preventDefault();
+        let checked = document.getElementById("form").value;
+        let checked_split = checked.split(",");
+        if (checked_split.length === 3) {
+          checked_list.push([checked_split[0], parseInt(checked_split[1]), parseInt(checked_split[2])]);
+        }
+        renderGameboard();
       }
-      for (let i = 0; i < row; i++){
-        let temp = []
-        checkCol:
-        for (let j = 0; j < col; j++){
-          for (let k = 0; k < checked_list.length/2; k++){
-            if (i == checked_list[k][1] && j == checked_list[k][2] {
-              temp[j] = "#"
-              break checkCol;
+
+      function renderGameboard() {
+        let gameboard = [];
+        for (let i = 0; i < row; i++) {
+          let temp = [];
+          for (let j = 0; j < col; j++) {
+            let found = false;
+            for (let k = 0; k < checked_list.length; k++) {
+              if (i === checked_list[k][1] && j === checked_list[k][2]) {
+                temp.push("#");
+                found = true;
+                break;
+              }
             }
+            if (!found) temp.push(fillValue);
           }
-          temp[j] = fillValue
-        }  
-          gameboard.push(temp)
-      }
-      
-      function createTableWithInnerHTML() {
-        let tableHTML = '<table><tr>';
-        tableHTML += '</tr>';
-        for (let i = 0; i < row; i++){
-          tableHTML += '<tr>';
-          for (let j = 0; j < col; j++){
-            tableHTML += '<td id='+gameboard[i][j]+'>'+gameboard[i][j]+'</td>';
-            };
-          tableHTML += '</tr>';
-          };
-        tableHTML += '</table>';
-        document.body.innerHTML += tableHTML;
+          gameboard.push(temp);
         }
 
-      createTableWithInnerHTML();
+        createTable(gameboard);
+      }
+
+      function createTable(gameboard) {
+        let tableHTML = '<table>';
+        for (let i = 0; i < gameboard.length; i++) {
+          tableHTML += '<tr>';
+          for (let j = 0; j < gameboard[i].length; j++) {
+            tableHTML += `<td>${gameboard[i][j]}</td>`;
+          }
+          tableHTML += '</tr>';
+        }
+        tableHTML += '</table>';
+        document.getElementById("gameboard").innerHTML = tableHTML;
+      }
+
+      renderGameboard(); // initial render
     </script>
   </body>
 </html>
