--- a/GOL.html
+++ b/GOL.html
@@ -3,15 +3,15 @@
   <body>
     <p id="gameboard"></p>
     <p>
-      updated15
+      updated16
     </p>
     <script>
-      let gameboard = [], row = 20, col = 20, off = ".", on = "#", fillValue = "&nbsp&nbsp&nbsp"+off+"&nbsp&nbsp&nbsp"
+      let gameboard = [], row = 20, col = 20, off = ".", on = "#"
  
       for (let i = 0; i < row; i++){
         let temp = []
         for (let j = 0; j < col; j++){
-          temp[j] = fillValue
+          temp[j] = off
         }  
           gameboard.push(temp)
       }
@@ -22,15 +22,15 @@
         for (let i = 0; i < row; i++){
           tableHTML += '<tr>';
           for (let j = 0; j < col; j++){
-            tableHTML += '<td onclick="change('+i,j+')" id='+gameboard[i][j]+'>'+gameboard[i][j]+'</td>';
+            tableHTML += '<td onclick="change('+i+','+j+')" id=cell-'+i+','+j+'>'+gameboard[i][j]+'</td>';
             };
           tableHTML += '</tr>';
           };
         tableHTML += '</table>';
         document.body.innerHTML += tableHTML;
         }
-      function change(x,y) {
-        document.getElementByID(gameboard[i][j]).innerHTML = "&nbsp&nbsp&nbsp"+on+"&nbsp&nbsp&nbsp"
+      function change(i,j) {
+        document.getElementById(cell-'+i+','+j+').innerHTML = on
       }
       createTableWithInnerHTML();
     </script>
