Only a teensby bit of AI

--- a/GOL.html
+++ b/GOL.html
@@ -2,36 +2,46 @@
 <html>
   <body>
     <p id="gameboard"></p>
-    <p>
-      updated16
-    </p>
+    <p>updated17</p>
+
     <script>
-      let gameboard = [], row = 20, col = 20, off = ".", on = "#"
- 
-      for (let i = 0; i < row; i++){
-        let temp = []
-        for (let j = 0; j < col; j++){
-          temp[j] = off
-        }  
-          gameboard.push(temp)
-      }
-      
-      function createTableWithInnerHTML() {
-        let tableHTML = '<table><tr>';
-        tableHTML += '</tr>';
-        for (let i = 0; i < row; i++){
-          tableHTML += '<tr>';
-          for (let j = 0; j < col; j++){
-            tableHTML += '<td onclick="change('+i+','+j+')" id=cell-'+i+','+j+'>'+gameboard[i][j]+'</td>';
-            };
-          tableHTML += '</tr>';
-          };
-        tableHTML += '</table>';
-        document.body.innerHTML += tableHTML;
+      let gameboard = [], row = 20, col = 20, off = ".", on = "#";
+
+      // Initialize gameboard with "off" values
+      for (let i = 0; i < row; i++) {
+        let temp = [];
+        for (let j = 0; j < col; j++) {
+          temp[j] = off;
         }
-      function change(i,j) {
-        document.getElementById(cell-'+i+','+j+').innerHTML = on
+        gameboard.push(temp);
       }
+
+      // Function to create the table
+      function createTableWithInnerHTML() {
+        let tableHTML = '<table>';
+
+        // Generate the table rows and cells
+        for (let i = 0; i < row; i++) {
+          tableHTML += '<tr>';
+          for (let j = 0; j < col; j++) {
+            // Use unique IDs for each cell using hyphens
+            tableHTML += '<td onclick="change('+i+','+j+')" id="cell-'+i+','+j+'">' + gameboard[i][j] + '</td>';
+          }
+          tableHTML += '</tr>';
+        }
+        tableHTML += '</table>';
+
+        // Append the generated table to the body
+        document.body.innerHTML += tableHTML;
+      }
+
+      // Function to change the value of the clicked cell
+      function change(i, j) {
+        // Get the correct cell by ID and change its content to "on" value
+        document.getElementById('cell-'+i+','+j+'').innerHTML = on;
+      }
+
+      // Call the function to generate the table
       createTableWithInnerHTML();
     </script>
   </body>
