fixed if to elif

--- a/GOL.html
+++ b/GOL.html
@@ -42,7 +42,7 @@
         if (cell.innerHTML == off) {
           cell.innerHTML = on;
         }
-        if (cell.innerHTML == on) {
+        else if (cell.innerHTML == on) {
           cell.innerHTML = off;
         }
       }
