--- a/gol.html
+++ b/gol.html
@@ -4,5 +4,6 @@
     <p id="gameboard"></p>
     <p>updated18</p>
     <script src="gol.js"></script>
+    <link rel="stylesheet" href="gol.css">
   </body>
 </html>
