--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         }
         function openGOL() {
             var win = window.open()
-            var url = "https://frostytoast37.github.io/GOL.html"
+            var url = "https://frostytoast37.github.io/gol.html"
             var iframe = win.document.createElement('iframe')
             iframe.style.width = "100%";
             iframe.style.height = "100%";
