--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <button onclick="openSpotify()">Spotify</button>
     <button onclick="openCC3d()">CC3d</button>
     <button onclick="openSR3d()">SNOW RIDER 3d</button>
+    <button onclick="openCN()">Craft Nite</button>
     <button><a onclick="crash()">DO NOT CLICK THIS</a></button>
     <button onclick="openTextAdventure()">Click for an adventure</button>
     <button onclick="openGOL()">What is Life?</button>
@@ -23,6 +24,17 @@
             iframe.style.border = "none";
             iframe.src = url
             win.document.body.appendChild(iframe)
+
+        function openCN() {
+            var win = window.open()
+            var url = "https://craftnite.io/"
+            var iframe = win.document.createElement('iframe')
+            iframe.style.width = "100%";
+            iframe.style.height = "100%";
+            iframe.style.border = "none";
+            iframe.src = url
+            win.document.body.appendChild(iframe)
+        
         }
         function openLemmy() {
             var win = window.open()
