--- a/gol.html
+++ b/gol.html
@@ -3,6 +3,8 @@
   <body>
     <p id="gameboard"></p>
     <p>updated19</p>
+    <button onclick="start()">Start</button>
+    <button onclick="stop()">Stop</button>
     <script src="gol.js"></script>
     <link rel="stylesheet" href="gol.css">
   </body>
