Update gol.html added row div

--- a/gol.html
+++ b/gol.html
@@ -2,6 +2,7 @@
 <html>
   <body>
     <p id="gameboard"></p>
+    <div style="--row: {row}"/>
     <p>updated20</p>
     <button onclick="start()">Start</button>
     <button onclick="stop()">Stop</button>
