--- a/gol.html
+++ b/gol.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <p id="gameboard"></p>
+    <div id="gameboard"></div>
     <p>updated20</p>
     <button onclick="start()">Start</button>
     <button onclick="stop()">Stop</button>
