--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <button><a onclick="crash()">DO NOT CLICK THIS</a></button>
     <button onclick="openTextAdventure()">Click for an adventure</button>
     <button onclick="openGOL()">What is Life?</button>
+    <button onclick="fun()">Fun?</button>
+
     
     <script>
         function openCookieChaos() {
@@ -105,6 +107,16 @@
         function openGOL() {
             var win = window.open()
             var url = "https://frostytoast37.github.io/gol.html"
+            var iframe = win.document.createElement('iframe')
+            iframe.style.width = "100%";
+            iframe.style.height = "100%";
+            iframe.style.border = "none";
+            iframe.src = url
+            win.document.body.appendChild(iframe)
+        }
+        function fun() {
+            var win = window.open()
+            var url = "https://frostytoast37.github.io/fun.html"
             var iframe = win.document.createElement('iframe')
             iframe.style.width = "100%";
             iframe.style.height = "100%";
