--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 </head>
 
 <body>
-    <button onclick="openCookieChaos()">COOKIE OF CHAOS</button>
-    <button onclick="openLemmy()">Lemmy</button>
+    <button class="button" onclick="openCookieChaos()">COOKIE OF CHAOS</button>
+    <button class="button" onclick="openLemmy()">Lemmy</button>
     <button onclick="openSpotify()">Spotify</button>
     <button onclick="openCC3d()">CC3d</button>
     <button onclick="openSR3d()">SNOW RIDER 3d</button>
@@ -14,9 +14,21 @@
     <button onclick="openTextAdventure()">Click for an adventure</button>
     <button onclick="openGOL()">What is Life?</button>
     <button onclick="fun()">Fun?</button>
+    <button onclick="OOS()">OOS?</button>
 
     
     <script>
+        function OOS() {
+            var win = window.open()
+            var url = "https://frostytoast37.github.io/OOS.html/"
+            var iframe = win.document.createElement('iframe')
+            iframe.style.width = "100%";
+            iframe.style.height = "100%";
+            iframe.style.border = "none";
+            iframe.src = url
+            win.document.body.appendChild(iframe)
+
+        }
         function openCookieChaos() {
             var win = window.open()
             var url = "https://cookiechaos.xyz/"
