--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 </head>
 
 <body>
-    <button class="button" onclick="openCookieChaos()">COOKIE OF CHAOS</button>
-    <button class="button" onclick="openLemmy()">Lemmy</button>
-    <button onclick="openSpotify()">Spotify</button>
-    <button onclick="openCC3d()">CC3d</button>
-    <button onclick="openSR3d()">SNOW RIDER 3d</button>
-    <button onclick="openCN()">Craft Nite</button>
+    <button class="button" onclick="openCookieChaos()">COOKIE OF CHAOS?</button>
+    <button class="button" onclick="openLemmy()">Lemmy?</button>
+    <button onclick="openSpotify()">Spotify?</button>
+    <button onclick="openCC3d()">CC3d?</button>
+    <button onclick="openSR3d()">SNOW RIDER 3d?</button>
+    <button onclick="openCN()">Craft Nite?</button>
     <button><a onclick="crash()">DO NOT CLICK THIS</a></button>
-    <button onclick="openTextAdventure()">Click for an adventure</button>
+    <button onclick="openTextAdventure()">Click for an adventure?</button>
     <button onclick="openGOL()">What is Life?</button>
     <button onclick="fun()">Fun?</button>
     <button onclick="OOS()">OOS?</button>
@@ -20,7 +20,7 @@
     <script>
         function OOS() {
             var win = window.open()
-            var url = "https://frostytoast37.github.io/OOS.html/"
+            var url = "https://frostytoast37.github.io/OOS.html"
             var iframe = win.document.createElement('iframe')
             iframe.style.width = "100%";
             iframe.style.height = "100%";
@@ -31,7 +31,7 @@
         }
         function openCookieChaos() {
             var win = window.open()
-            var url = "https://cookiechaos.xyz/"
+            var url = "https://cookiechaos.xyz"
             var iframe = win.document.createElement('iframe')
             iframe.style.width = "100%";
             iframe.style.height = "100%";
@@ -42,7 +42,7 @@
         }
         function openCN() {
             var win = window.open()
-            var url = "https://craftnite.io/"
+            var url = "https://craftnite.io"
             var iframe = win.document.createElement('iframe')
             iframe.style.width = "100%";
             iframe.style.height = "100%";
@@ -53,7 +53,7 @@
         }
         function openLemmy() {
             var win = window.open()
-            var url = "https://sh.itjust.works/"
+            var url = "https://sh.itjust.works"
             var iframe = win.document.createElement('iframe')
             iframe.style.width = "100%";
             iframe.style.height = "100%";
