--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <button onclick="openTextAdventure()">Click for an adventure?</button>
     <button onclick="openGOL()">What is Life?</button>
     <button onclick="fun()">Fun?</button>
-    <button onclick="OOS()">OOS?</button>
+    <button<a onclick="OOS()">OOS?</a></button>
 
     
     <script>
