--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 </head>
 
 <body>
-    <button class="button" onclick="openCookieChaos()">COOKIE OF CHAOS?</button>
-    <button class="button" onclick="openLemmy()">Lemmy?</button>
+    <button onclick="openCookieChaos()">COOKIE OF CHAOS?</button>
+    <button onclick="openLemmy()">Lemmy?</button>
     <button onclick="openSpotify()">Spotify?</button>
     <button onclick="openCC3d()">CC3d?</button>
     <button onclick="openSR3d()">SNOW RIDER 3d?</button>
