--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 </head>
 
 <body>
+    <link rel="stylesheet" href="styles.css">
+
+    <!-- BUTTONS -->
     <button onclick="openCookieChaos()">COOKIE OF CHAOS?</button>
     <button onclick="openLemmy()">Lemmy?</button>
     <button onclick="openSpotify()">Spotify?</button>
