--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 
     <!-- BUTTONS -->
     <button onclick="openCookieChaos()">COOKIE OF CHAOS?</button>
