linked style.css stylesheet

--- a/gol.html
+++ b/gol.html
@@ -20,5 +20,6 @@
     <button onclick="stop()">Stop</button>
     <script src="gol.js"></script>
     <link rel="stylesheet" href="gol.css">
+    <link rel="stylesheet" href="style.css">
   </body>
 </html>
