added button group div

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 
     <!-- BUTTONS -->
+    <div class="button-group">
     <button onclick="openCookieChaos()">COOKIE OF CHAOS?</button>
     <button onclick="openLemmy()">Lemmy?</button>
     <button onclick="openSpotify()">Spotify?</button>
@@ -18,7 +19,8 @@
     <button onclick="openGOL()">What is Life?</button>
     <button onclick="openMC()">Fun?</button>
     <button onclick="openOOS()">OOS?</button>
-
+    </div>
+    
     
     <script>
         function openCookieChaos() {
