--- a/text-adventure.html
+++ b/text-adventure.html
@@ -1,1 +1,13 @@
-
+<html>
+  <head>
+    
+  </head>
+  <body>
+    <div id="terminal">
+      <form>
+        <input type="text" id="input" name="input">
+      </form>
+      <div id="output"></div>
+    </div>
+  </body>
+</html>
