--- a/text-adventure.html
+++ b/text-adventure.html
@@ -9,5 +9,7 @@
       </form>
       <div id="output"></div>
     </div>
+    <script src="text-adv.js"></script>
+    <link rel="stylesheet" href="text-adv.css">
   </body>
 </html>
