--- a/gol.html
+++ b/gol.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <link rel="stylesheet" href="gol.css">
+    <link rel="stylesheet" href="style.css">
+  </head>
   <body>
     <div id="gameboard"></div>
     <h1>Conway's Game of Life</h1>
@@ -19,7 +23,5 @@
     <button onclick="start()">Start</button>
     <button onclick="stop()">Stop</button>
     <script src="gol.js"></script>
-    <link rel="stylesheet" href="gol.css">
-    <link rel="stylesheet" href="style.css">
   </body>
 </html>
