output above form box

--- a/text-adventure.html
+++ b/text-adventure.html
@@ -1,13 +1,14 @@
 <html>
   <head>
     <link rel="stylesheet" href="text-adv.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div id="terminal">
+      <div id="output"></div>
       <form>
         <input type="text" id="input" name="input">
       </form>
-      <div id="output"></div>
     </div>
     <script src="text-adv.js"></script>
   </body>
