--- a/text-adventure.html
+++ b/text-adventure.html
@@ -7,7 +7,7 @@
     <div id="terminal">
       <div id="output"></div>
       <form>
-        <input type="text" id="input" name="input">
+        <input type="text" id="input" name="input" autoFocus>
       </form>
     </div>
     <script src="text-adv.js"></script>
