--- a/text-adventure.html
+++ b/text-adventure.html
@@ -6,9 +6,12 @@
   <body>
     <div id="terminal">
       <div id="output"></div>
-      <form>
-        <input type="text" id="input" name="input" autoFocus>
-      </form>
+      <span style=white-space:nowrap>
+        <label for="input">&gt;&gt;&gt;</label>
+        <form>
+          <input type="text" id="input" name="input" autoFocus>
+        </form>
+      </span>
     </div>
     <script src="text-adv.js"></script>
   </body>
