--- a/text-adventure.html
+++ b/text-adventure.html
@@ -6,12 +6,11 @@
   <body>
     <div id="terminal">
       <div id="output"></div>
-      <span style=white-space:nowrap>
-        <label for="input">&gt;&gt;&gt;</label>
         <form>
-          <input type="text" id="input" name="input" autoFocus>
+          <label for="input">&gt;&gt;&gt;>
+            <input type="text" id="input" name="input" autoFocus>
+          </label>
         </form>
-      </span>
     </div>
     <script src="text-adv.js"></script>
   </body>
