--- a/text-adventure.html
+++ b/text-adventure.html
@@ -7,7 +7,8 @@
     <div id="terminal">
       <div id="output"></div>
         <form>
-          <label for="input">&gt;&gt;&gt;>
+          <label for="input">
+            &gt;&gt;&gt;
             <input type="text" id="input" name="input" autoFocus>
           </label>
         </form>
