--- a/text-adventure.html
+++ b/text-adventure.html
@@ -5,10 +5,15 @@
   </head>
   <body>
     <div id="terminal">
-      <div id="output"></div>
-      <form>
-        <input type="text" id="input" name="input" autoFocus>
-      </form>
+      <div id="output">
+      <!-- inner html placed here by js -->
+      </div>
+      <div id="prompt">
+        <form>
+          <label for="input"> &gt; &gt; &gt; </label>
+          <input type="text" id="input" name="input" autoFocus>
+        </form>
+      </div>
     </div>
     <script src="text-adv.js"></script>
   </body>
