--- a/text-adventure.html
+++ b/text-adventure.html
@@ -8,9 +8,9 @@
       <div id="output">
       <!-- inner html placed here by js -->
       </div>
-      <div id="prompt">
+      <div class="prompt">
         <form>
-          <label for="input"> &gt; &gt; &gt; </label>
+          <label for="input">&gt;&gt;&gt;</label>
           <input type="text" id="input" name="input" autoFocus>
         </form>
       </div>
