--- a/text-adventure.html
+++ b/text-adventure.html
@@ -10,7 +10,7 @@
       </div>
       <div class="prompt">
         <form>
-          <label for="input">&gt;&gt;&gt;</label>
+          <label id="label" for="input">&gt;&gt;&gt;</label>
           <input type="text" id="input" name="input" autoFocus>
         </form>
       </div>
