--- a/text-adventure.html
+++ b/text-adventure.html
@@ -10,8 +10,8 @@
       </div>
       <div class="prompt">
         <form>
-          <label id="label" for="input">&gt;&gt;&gt;</label>
-          <input type="text" id="input" name="input" autoFocus>
+          <label id="prompt_label" for="input">&gt;&gt;&gt;</label>
+          <input type="text" id="prompt_input" name="input" autoFocus>
         </form>
       </div>
     </div>
