--- a/text-adventure.html
+++ b/text-adventure.html
@@ -9,7 +9,7 @@
       <!-- inner html placed here by js -->
       </div>
       <div class="prompt">
-        <form>
+        <form autocomplete="off">
           <label id="prompt_label" for="input">&gt;&gt;&gt;</label>
           <input type="text" id="prompt_input" name="input" autoFocus>
         </form>
