--- a/text-adventure.html
+++ b/text-adventure.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h id="title">Text Adventure<br>&nbsp;</h>
+    <h id="title">Text Adventure</h>
     <div id="terminal">
       <div id="output">
       <!-- inner html placed here by js -->
