--- a/text-adventure.html
+++ b/text-adventure.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h id="title">Text Adventure</h>
+    <h>&nbsp;</h>
     <div id="terminal">
       <div id="output">
       <!-- inner html placed here by js -->
