--- a/text-adventure.html
+++ b/text-adventure.html
@@ -5,9 +5,9 @@
   </head>
   <body>
     <h id="title">Text Adventure</h>
-    <h>&nbsp;</h>
     <div id="terminal">
       <div id="output">
+      <p>&nbsp;</p>
       <!-- inner html placed here by js -->
       </div>
       <div class="prompt">
