--- a/text-adventure.html
+++ b/text-adventure.html
@@ -5,6 +5,11 @@
   </head>
   <body>
     <h id="title">Text Adventure</h>
+    <h2>Actions:</h2>
+    <h3>Move: N,E,S,W <br>
+        Grab {item} <br>
+        Inventory
+        </h3>
     <div id="terminal">
       <div id="output">
       <p>&nbsp;</p>
