--- a/text-adventure.html
+++ b/text-adventure.html
@@ -5,11 +5,25 @@
   </head>
   <body>
     <h id="title">Text Adventure</h>
-    <h2>Actions:</h2>
-    <h3>Move: N,E,S,W <br>
-        Grab {item} <br>
-        Inventory
-        </h3>
+    <div id="instruction">
+      <h2>Actions:</h2>
+      <span>
+        <h2>Movement</h2>
+        <h3>N,E,S,W </h3>
+      </span>
+      <span>
+        <h2>Interact:</h2>
+        <h3>Search     <br>
+            Loot       <br>
+            Inventory  </h3>
+      </span>
+      <span>
+        <h2>Fighting Actions:</h2>
+        <h3>Shoot   <br>
+            Load    <br>
+            Block   </h3>
+      </span>
+    </div>
     <div id="terminal">
       <div id="output">
       <p>&nbsp;</p>
