--- a/text-adventure.html
+++ b/text-adventure.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h id="title">Text Adventure</h>
+    <h1 id="title">Text Adventure</h1>
     <div id="instruction">
       <h2>Actions:</h2>
       <span>
