--- a/text-adventure.html
+++ b/text-adventure.html
@@ -7,21 +7,21 @@
     <h1 id="title">Text Adventure</h1>
     <div id="instruction">
       <h2>Actions:</h2>
-      <span>
+      <span id="movement">
         <h2>Movement</h2>
-        <h3>N,E,S,W </h3>
+        <h4>N,E,S,W </h4>
       </span>
-      <span>
+      <span id="interact">
         <h2>Interact:</h2>
-        <h3>Search     <br>
+        <h4>Search     <br>
             Loot       <br>
-            Inventory  </h3>
+            Inventory  </h4>
       </span>
-      <span>
+      <span id="fighting">
         <h2>Fighting Actions:</h2>
-        <h3>Shoot   <br>
+        <h4>Shoot   <br>
             Load    <br>
-            Block   </h3>
+            Block   </h4>
       </span>
     </div>
     <div id="terminal">
