--- a/text-adventure.html
+++ b/text-adventure.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1 id="title">Text Adventure</h1>
-    <div id="instruction">
+    <div id="instructions">
       <h2>Actions:</h2>
       <span id="movement">
         <h2>Movement</h2>
