--- a/text-adventure.html
+++ b/text-adventure.html
@@ -6,7 +6,7 @@
   <body>
     <h1 id="title">Text Adventure</h1>
     <div id="instructions">
-      <h2>Actions:</h2>
+      <h2>Actions: <br></h2>
       <span id="movement">
         <h2>Movement</h2>
         <h4>N,E,S,W </h4>
