--- a/text-adventure.html
+++ b/text-adventure.html
@@ -5,20 +5,25 @@
   </head>
   <body>
     <h1 id="title">Text Adventure</h1>
-    <h2>Actions: <br></h2>
+    <h2>Actions:</h2>
     <div id="instructions">
       <span id="movement">
         <h2>Movement</h2>
-        <h4>N,E,S,W </h4>
+        <h4>N,E,S,W,U,D</h4>
       </span>
       <span id="interact">
-        <h2>Interact:</h2>
-        <h4>Search     <br>
-            Loot       <br>
-            Inventory  </h4>
+        <h2>Interact:   </h2>
+        <h4>Search      <br>
+            Grab [item] </h4>
+      </span>
+      <span id="interact">
+        <h2>Inventory:                 </h2>
+        <h4>Inventory/inv (opens)      <br>
+            Drop [item slot number]    <br>
+            Switch [slot 1] [slot 2]   </h4>
       </span>
       <span id="fighting">
-        <h2>Fighting Actions:</h2>
+        <h2>Fighting Actions: (use your 1st slot weapon)</h2>
         <h4>Shoot   <br>
             Load    <br>
             Block   </h4>
