--- a/text-adventure.html
+++ b/text-adventure.html
@@ -20,11 +20,11 @@
         <h2>Inventory:                 </h2>
         <h4>Inventory/inv (opens)      <br>
             Drop [item slot number]    <br>
-            Switch [slot 1] [slot 2]   </h4>
+            Swap [slot 1] [slot 2]   </h4>
       </span>
       <span id="fighting">
         <h2>Fighting Actions: (use your 1st slot weapon)</h2>
-        <h4>Shoot   <br>
+        <h4>Attack   <br>
             Load    <br>
             Block   </h4>
       </span>
