--- a/text-adventure.html
+++ b/text-adventure.html
@@ -41,6 +41,7 @@
         </form>
       </div>
     </div>
+    <script src="dialogue.js"></script>
     <script src="text-adv.js"></script>
   </body>
 </html>
